# soundly

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/: main.py  waveform_widget.py
src/: audio_engine.rs  flac.rs  lib.rs  playback.rs
